--- a/app/src/main/res/drawable/item_bottom_background.xml
+++ b/app/src/main/res/drawable/item_bottom_background.xml
@@ -6,7 +6,7 @@
         </shape>
     </item>
 
-    <item android:bottom="1dp" android:right="1dp" android:left="1dp">
+    <item android:bottom="1dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/white" />
         </shape>
