--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_local"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="@id/layout_today"
             app:layout_constraintBottom_toBottomOf="@id/layout_today"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/layout_today">
+            app:layout_constraintEnd_toStartOf="@id/layout_today"
+            app:layout_constraintHorizontal_weight="1.3"
+            android:background="@drawable/item_background">
             <TextView
                 android:id="@+id/tv_local"
                 android:layout_width="0dp"
@@ -19,8 +22,10 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:text="Local"
-                android:gravity="center"/>
+                android:text="Seoul"
+                android:gravity="center"
+                android:layout_marginHorizontal="4dp"
+                style="@style/Body13"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_today"
@@ -29,8 +34,54 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/layout_local"
-            app:layout_constraintEnd_toStartOf="@id/layout_tomorrow">
-
+            app:layout_constraintEnd_toStartOf="@id/layout_tomorrow"
+            app:layout_constraintHorizontal_weight="5"
+            android:padding="12dp"
+            android:background="@drawable/item_bottom_background">
+            <ImageView
+                android:id="@+id/img_today_weather"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/tv_today_weather"
+                android:adjustViewBounds="true"
+                app:layout_constraintWidth_percent="0.3"/>
+            <TextView
+                android:id="@+id/tv_today_weather"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/img_today_weather"
+                app:layout_constraintBottom_toTopOf="@id/tv_today_temperature"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintVertical_chainStyle="packed"
+                android:layout_marginStart="12dp"
+                tools:text="Weather"
+                style="@style/Body14"/>
+            <TextView
+                android:id="@+id/tv_today_temperature"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/tv_today_weather"
+                app:layout_constraintTop_toBottomOf="@id/tv_today_weather"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0"
+                android:layout_marginTop="10dp"
+                tools:text="10℃"
+                style="@style/Temperature"/>
+            <TextView
+                android:id="@+id/tv_today_percent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/tv_today_temperature"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBaseline_toBaselineOf="@id/tv_today_temperature"
+                app:layout_constraintHorizontal_bias="0"
+                android:layout_marginStart="12dp"
+                tools:text="10%"
+                style="@style/Humidity"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_tomorrow"
@@ -39,8 +90,53 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/layout_today"
-            app:layout_constraintEnd_toEndOf="parent">
-
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_weight="5"
+            android:padding="12dp"
+            android:background="@drawable/item_background">
+            <ImageView
+                android:id="@+id/img_tomorrow_weather"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/tv_tomorrow_weather"
+                android:adjustViewBounds="true"
+                app:layout_constraintWidth_percent="0.3"/>
+            <TextView
+                android:id="@+id/tv_tomorrow_weather"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/img_tomorrow_weather"
+                app:layout_constraintBottom_toTopOf="@id/tv_tomorrow_temperature"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintVertical_chainStyle="packed"
+                android:layout_marginStart="12dp"
+                tools:text="Weather"
+                style="@style/Body14"/>
+            <TextView
+                android:id="@+id/tv_tomorrow_temperature"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/tv_tomorrow_weather"
+                app:layout_constraintTop_toBottomOf="@id/tv_tomorrow_weather"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="10dp"
+                tools:text="10℃"
+                style="@style/Temperature"/>
+            <TextView
+                android:id="@+id/tv_tomorrow_percent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/tv_tomorrow_temperature"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBaseline_toBaselineOf="@id/tv_tomorrow_temperature"
+                app:layout_constraintHorizontal_bias="0"
+                android:layout_marginStart="12dp"
+                tools:text="10%"
+                style="@style/Humidity"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
