--- a/app/src/main/res/drawable/header_top_bottom_background.xml
+++ b/app/src/main/res/drawable/header_top_bottom_background.xml
@@ -9,7 +9,7 @@
     <item android:bottom="1dp"
         android:top="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/grey_ef" />
+            <solid android:color="@color/grey_f8" />
         </shape>
     </item>
 
