--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,5 @@
     <color name="grey_df">#DFDFDF</color>
     <color name="grey_f8">#F8F8F8</color>
     <color name="orange">#F83918</color>
-    <color name="orange_deep">#CA3015</color>
+    <color name="orange_deep">#BF3821</color>
 </resources>
